testdata/baselines/reference/submodule/conformance/checkJsdocSatisfiesTag3.errors.txt
/a.js(4,7): error TS7006: Parameter 's' implicitly has an 'any' type.
/a.js(8,49): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== /a.js (2 errors) ====
    /** @type {{ f(s: string): void } & Record<string, unknown> }} */
    let obj = /** @satisfies {{ g(s: string): void } & Record<string, unknown>} */ ({
        f(s) { }, // "incorrect" implicit any on 's'
        g(s) { }
          ~
!!! error TS7006: Parameter 's' implicitly has an 'any' type.
    });
    
    // This needs to not crash (outer node is not expression)
    /** @satisfies {{ f(s: string): void }} */ ({ f(x) { } })
                                                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    